added new globals parameters and panel updated command API for Java 7 resolved adding suite bug